02/25/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.2.7 'Iosiv Lestek':
	- authorization processing fixed
	
02/22/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.2.6 'Iosiv Lestek':
	- strcpy/strncpy fixed
	- some screen messages fixed
	- uclient statistics fixed
	- software attribute fixed
	- example scripts fixed
	
02/16/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.2.5 'Lestek':
	- uclient application fixed
	- Docs fixes

02/14/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.2.4 'Lestek':
	- Crash fixed on unconfigured interfaces
	- Docs fixes
	
02/12/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.2.3 'Lestek':
	- Added feature: TURN Server always uses fingerprints in a session if 
	  the session client is using fingerprints.
	- Default unsecure alternative port changed to 3479,
	  default secure alternative port changed to 5350.
	- TURN Server always trying to search for default certificate file
	  turn_server_cert.pem and for default private key file
	  turn_server_pkey.pem, if not certificate or private key is
	  explicitly configured.
	- configurable packet rate in the uclient test program. 
	- default peer port changed to 3480.
	- -z, --no-auth option added to turnserver.
	
02/11/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.2.2 'Lestek':
	- Some cleanup added to the network input handlers.
	
02/9/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.2.1 'Lestek':
	- Binding requests do not require authentication.
	- SOFTWARE in the end of the message.
	
02/8/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.2.0 'Lestek':
	- NAT discovery fixed (RFC5780).
	
02/8/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.1.6 'Calder':
	- Installation instructions fixed.

02/8/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.1.5 'Calder':
	- Mac compilation fixes.
	- Fixes for old Linuxes.
	
02/7/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.1.4 'Calder':